# phatq

./: README.md  star  star.c  x_u64.sat  x_u64_assertion_violation_bug.sat  x_u64_direct.sat
.cargo/: config
all/: checkpoints  preamble.smt  solve.py  solve.py.bak  template.smt
bench/: bench.sh  x_u64.sat  x_u64_cvc4.sat
old/: Cargo.toml  gen-planet-unsat.py  gen-star-unsat.py  gen.py  gen2-unsat.py  phatq-without-atomic.s  res.py  x_int.sat  x_u64_index.sat
old/src/: main.rs
