[package]
name = "phatq"
version = "0.1.0"
authors = ["ritfed-tabryg"]
edition = "2018"

[dependencies]
num_cpus = "1.13.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.xxhash-rust]
version = "0.8.0"
features = ["xxh3"]

[profile.release]
codegen-units = 1
lto = true
